@@ -174,6 +174,7 @@ option('jack', type: 'feature', description: 'JACK output plugin')
 option('openal', type: 'feature', description: 'OpenAL output plugin')
 option('oss', type: 'feature', description: 'Open Sound System support')
 option('pipe', type: 'boolean', value: true, description: 'Pipe output plugin')
+option('pipewire', type: 'feature', description: 'PipeWire support')
 option('pulse', type: 'feature', description: 'PulseAudio support')
 option('recorder', type: 'boolean', value: true, description: 'Recorder output plugin')
 option('shout', type: 'feature', description: 'Shoutcast streaming support using libshout')
